--- a/footer/footer.css
+++ b/footer/footer.css
@@ -19,6 +19,7 @@ footer{
     font-family: "Nunito Sans", sans-serif;
     width: 355.07px;
     font-size: 18px;
+    text-align: left;
 }
 
 #BOTONredessociales{
