--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -37,6 +37,19 @@ main{
   border-color: transparent transparent transparent #ffffff; /* Cambia el color del triángulo al hacer hover */
 }
 
+/* Estilo para la "X" */
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 20px; 
+  color: #0D5552;
+  font-size: 40px; 
+  text-decoration: none;
+  font-family: 'Bebas Neue', sans-serif; 
+  background: white; 
+  padding: 10px; 
+}
+
 /* container_principal */
 #container_principal{
     min-height: 100vh;
@@ -74,6 +87,16 @@ main{
   padding: 60px;
   padding-bottom: 0px !important;
   margin: 0px;
+}
+
+p{
+  max-height: 722px;
+  margin-bottom: 5px;
+  text-align: left;
+  padding: 50px;
+  padding-bottom: 0px !important;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 22px;
 }
 
 /* contenido */
