--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -1,11 +1,12 @@
 body{
-    background-color: #0E1720 !important;
-    margin: 0; 
-    color: #13847E;
-    font-family: "Bebas Neue", sans-serif;
+  background-color: #0E1720 !important;
+  margin: 0;
+  padding: 0;
+  color: #13847E;
+  font-family: "Bebas Neue", sans-serif;
 }
 main{
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .navbar{
@@ -15,7 +16,6 @@ main{
 .rectangulopestaña {
     width: 200px;
     height: 50px;
-    margin-left: 80px;
     background-color: #ffffff;
     position: relative;
   }
@@ -37,12 +37,6 @@ main{
   .rectangulopestaña:hover::after {
     border-color: transparent transparent transparent #ffffff; /* Cambia el color del triángulo al hacer hover */
   }
-
-  h1{
-    padding-top: 40px;
-    margin-left: 40px;
-    size: 50px;
-  }
   
   /* Estilo para la "X" */
 .close-button {
@@ -56,25 +50,20 @@ main{
   background: white; 
   padding: 10px; 
 }
-  
-  #container_principal p{
-    max-width: 800px;
-    margin-bottom: 5px;
-    margin: 50px auto;
-    padding: 0 20px;
-    text-align: left;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 22px;
-  }
-
 #container_principal{
-    min-height: 100vh;
-    background-color: #ffffff;
-    flex-wrap: wrap;
-    padding: 0;
-    padding-bottom: 213px;
-    margin-left: 80px;
-    margin-right: 80px;
+  max-height: 100%;
+  background-color: #ffffff;
+  padding: 40px;
+  padding-bottom: 40px;
+}
+#container_principal p{
+  max-width: 100%;
+  margin-bottom: 5px;
+  margin: 50px auto;
+  padding: 0 20px;
+  text-align: left;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 22px;
 }
 
 /* Estilo para el contenedor principal */
@@ -94,10 +83,11 @@ main{
 img {
   max-width: 100%;
   height: auto;
-  margin-bottom: 40px;
+  margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 40px;
   margin-top: 40px;
+  display: inline-block;
 }
 
 @media (max-width: 480px) {
@@ -105,13 +95,14 @@ img {
   .rectangulopestaña{
     margin-left: 32px;
   }
-
+  
   #container_principal{
-    width: 326px;
     height: 100%;
+    max-width: 326px;
   }
+
   #container_principal .p{
-    font-size: 15px;
+    font-size: 15px !;
   }
   .container-img {
     display: block;
@@ -120,4 +111,5 @@ img {
     display: block; /* Cada imagen en su propia línea */
     margin: 10px auto; /* Centrar las imágenes y añadir espacio entre ellas */
   }
+  
 }
