--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,6 @@ canvas {
     margin: auto;
 }
 
-
-h1{
-    color: rgb(255, 255, 255);
-    position: relative;
-    right: 800px;
-}
-
 /* rectangulos */
 
 .contenedor {
@@ -38,11 +31,14 @@ h1{
     align-items: left;
 }
 
-p {
+#texto_inicial {
     color: white;
     font-size: 18px;
     line-height: 1.5; /* Ajustamos el espaciado entre líneas */
     text-align: center;
+    max-height: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .rectangulopestaña {
@@ -265,6 +261,15 @@ p {
     #franja_2 .container h2 {
         font-size: 20px;
     }
+    #texto_diseño h2 {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        font-size: 40px;
+    }
+    .col-6 {
+        width: 100%;
+    }
 }
 
 @media (max-width: 480px) {
@@ -284,6 +289,18 @@ p {
     #fondofinal{
         max-width: 100%;
     }
+    #texto_diseño h2 {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        font-size: 40px;
+    }
+    .col-6 {
+        width: 100%;
+    }
+    #texto_inicial {
+        font-size: 16px !important;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 768px) {
@@ -302,6 +319,9 @@ p {
     }
     #fondofinal{
         max-width: 100%;
+    }
+    .col-6 {
+        width: 100%;
     }
 }
 
