--- a/css/campolaboral.css
+++ b/css/campolaboral.css
@@ -195,7 +195,6 @@ main{
   }
 
   #container_principal{
-    max-width: 326px;
     height: 100%;
     padding: 20px;
     padding-top: 20px;
@@ -256,4 +255,13 @@ main{
     max-width: 100%;
     max-height: 100%;
 }
+}
+@media (max-width: 576px){
+  #container_principal{
+    max-width: 80%;
+  }
+  .rectangulopestaña{
+    margin-left: 10%;
+    width: 100px;
+  }
 }
